// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Simple/Hamburger active hamburger 1`] = `
<button className={"hamburger hamburger--squeeze is-active"} type={"button"}>
  <span className={"hamburger-box"}>
    <span className={"hamburger-inner"} />
  </span>
</button>
`;

exports[`Storyshots Simple/Hamburger inactive hamburger 1`] = `
<button className={"hamburger hamburger--squeeze"} type={"button"}>
  <span className={"hamburger-box"}>
    <span className={"hamburger-inner"} />
  </span>
</button>
`;
